# autonice

./: Cargo.toml  Makefile  README.md  autonice.service  autonice.toml  docker-compose.yml  install.sh  rust-toolchain.toml
.cargo/: config.toml
.forgejo/workflows/: ci.yml
autonice/: Cargo.toml  build.rs
autonice-common/: Cargo.toml
autonice-common/src/: lib.rs
autonice-ebpf/: Cargo.toml  build.rs
autonice-ebpf/src/: lib.rs  main.rs
autonice/src/: install.rs  main.rs
