[workspace]
resolver = "2"
members = [
    "autonice",
    "autonice-common",
    "autonice-ebpf",
]
# The eBPF crate builds for `bpfel-unknown-none` with `-Z build-std` and is
# compiled by the userspace crate's build.rs (cargo-in-cargo). Keeping it out of
# default-members means a plain `cargo build` won't try to build it for the host.
default-members = ["autonice", "autonice-common"]

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2024"

[workspace.dependencies]
# Track aya git main: the crates.io 0.13.1 release predates the current
# `aya-build`/`aya-ebpf` API used by build.rs and the eBPF program below.
aya = { git = "https://github.com/aya-rs/aya", default-features = false }
aya-build = { git = "https://github.com/aya-rs/aya", default-features = false }
aya-ebpf = { git = "https://github.com/aya-rs/aya", default-features = false }

anyhow = { version = "1", default-features = false }
cargo_metadata = { version = "0.23.0", default-features = false }
env_logger = { version = "0.11", default-features = false }
libc = { version = "0.2", default-features = false }
log = { version = "0.4", default-features = false }
serde = { version = "1", default-features = false, features = ["derive"] }
tokio = { version = "1", default-features = false }
toml = { version = "0.8", default-features = false, features = ["parse"] }
which = { version = "6", default-features = false }

[profile.release.package.autonice-ebpf]
debug = 2
codegen-units = 1
strip = false
