[package]
name = "autonice-common"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[features]
default = []
# Enables the `aya::Pod` impl so userspace can read events out of the ring buffer.
user = ["aya"]

[dependencies]
aya = { workspace = true, optional = true }

[lib]
path = "src/lib.rs"
