[package]
name = "autonice"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
autonice-common = { path = "../autonice-common", features = ["user"] }

anyhow = { workspace = true, default-features = true }
aya = { workspace = true }
env_logger = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }

[build-dependencies]
anyhow = { workspace = true }
aya-build = { workspace = true }
cargo_metadata = { workspace = true }
# Declared so cargo tracks the eBPF crate for cache invalidation; it is actually
# compiled by build.rs (cargo-in-cargo), since it needs `-Z build-std`.
autonice-ebpf = { path = "../autonice-ebpf" }

[[bin]]
name = "autonice"
path = "src/main.rs"
